build/k8s/web/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}-web
  namespace: ${PROJECT_NAME}-${PROJECT_ENV}  
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ${PROJECT_NAME}-web
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}-web
    spec:
      containers:
        - name: ${PROJECT_NAME}-web
          image: ${WEB_IMAGE_TAG}
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "1G"
              cpu: "1"
      restartPolicy: Always
