build/k8s/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${PROJECT_NAME}-web
  namespace: ${PROJECT_NAME}-${PROJECT_ENV}
spec:
  type: ClusterIP
  selector:
    app: ${PROJECT_NAME}-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
