build/k8s/web/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${PROJECT_NAME}-web-${PROJECT_ENV}
  namespace: ${PROJECT_NAME}-${PROJECT_ENV}
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`${WEB_DOMAIN}`)
    kind: Rule
    services:
    - name: ${PROJECT_NAME}-web
      port: 3000
